# mxklabs-example-cpp-app

./: .gitignore  CMakeLists.txt  README.md  default.nix
include/example_cpp_app/: foo.hpp
src/: main.cpp
src/example_cpp_app/: foo.cpp  githash.cpp.in  githash.hpp  main.cpp
